--- a/content/settings.json
+++ b/content/settings.json
@@ -4,7 +4,7 @@
   "primary_color": "#000000",
   "theme": {
     "bootswatch": "lumen",
-    "custom": "clean-white"
+    "custom": "_"
   },
   "bg_color": "#000000",
   "repository": "ecomplus-stores/urbanna",
